# Athena-Project

./: .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: ci.yaml
athena/charts/athena/: Chart.yaml  values.yaml
athena/charts/athena/templates/: deployment.yaml
athena/control_plane/: alembic.ini  requirements.txt
athena/control_plane/app/: core_client.py  crud.py  db.py  main.py  models.py
athena/control_plane/proto/: inference_pb2.py  inference_pb2_grpc.py
athena/control_plane/tests/: test_db.py  test_grpc_client.py  test_main.py
athena/core/: CMakeLists.txt
athena/core/src/: batcher.cpp  batcher.h  dispatcher.cpp  dispatcher.h  grpc_server.cpp  grpc_server.h  inference.cpp  inference.h  server.cpp
athena/core/tests/: CMakeLists.txt  test_batcher.cpp
athena/docker/: athena-core.Dockerfile  control-plane.Dockerfile
control-plane/: requirements.txt
control-plane/app/: main.py
control_plane/: requirements.txt
control_plane/alembic/: env.py
control_plane/app/: crud.py  db.py  main.py  models.py
control_plane/tests/: test_db.py  test_main.py
core/: CMakeLists.txt
core/src/: batcher.cpp  batcher.h  dispatcher.cpp  dispatcher.h  inference.h  server.cpp
core/tests/: CMakeLists.txt  test_batcher.cpp
dev/: docker-compose.yaml
docker/: athena-core.Dockerfile  control-plane.Dockerfile
proto/: inference.proto
